@@ -27,6 +27,7 @@ import Wait
 -- | Command line options
 data Options = Options
     {command :: String
+    ,test :: Maybe String
     ,height :: Maybe Int
     ,width :: Maybe Int
     ,topmost :: Bool
@@ -38,6 +39,7 @@ data Options = Options
 options :: Mode (CmdArgs Options)
 options = cmdArgsMode $ Options
     {command = "" &= typ "COMMAND" &= help "Command to run (defaults to ghci or cabal repl)"
+    ,test = Nothing &= name "T" &= typ "EXPR" &= help "Command to run after successful loading"
     ,height = Nothing &= help "Number of lines to show (defaults to console height)"
     ,width = Nothing &= help "Number of columns to show (defaults to console width)"
     ,topmost = False &= name "t" &= help "Set window topmost (Windows only)"
@@ -75,7 +77,7 @@ main = do
                 -- so putStrLn width 'x' uses up two lines
                 return (f width 80 (pred . fst), f height 8 snd)
         withWaiterNotify $ \waiter ->
-            runGhcid waiter restart command height $ \xs -> do
+            runGhcid waiter restart command test height $ \xs -> do
                 outWith $ forM_ (groupOn fst xs) $ \x@((b,_):_) -> do
                     when b $ setSGR [SetConsoleIntensity BoldIntensity]
                     putStr $ concatMap ((:) '\n' . snd) x
@@ -83,8 +85,8 @@ main = do
                 hFlush stdout -- must flush, since we don't finish with a newline
 
 
-runGhcid :: Waiter -> [FilePath] -> String -> IO (Int,Int) -> ([(Bool,String)] -> IO ()) -> IO ()
-runGhcid waiter restart command size output = do
+runGhcid :: Waiter -> [FilePath] -> String -> Maybe String -> IO (Int,Int) -> ([(Bool,String)] -> IO ()) -> IO ()
+runGhcid waiter restart command test size output = do
     let outputFill :: Maybe [Load] -> [String] -> IO ()
         outputFill load msg = do
             (width, height) <- size
@@ -115,13 +117,21 @@ runGhcid waiter restart command size output = do
             let validWarn w = loadFile w `elem` loaded && loadFile w `notElem` reloaded
             messages <- return $ filter validWarn warnings ++ messages
             let (countErrors, countWarnings) = both sum $ unzip [if loadSeverity m == Error then (1,0) else (0,1) | m@Message{} <- messages]
+            test <- return $ if countErrors == 0 then test else Nothing
 
-            outputFill (Just messages) []
-            setTitle $
-                let f n msg = if n == 0 then "" else show n ++ " " ++ msg ++ ['s' | n > 1]
-                in (if countErrors == 0 && countWarnings == 0 then "All good" else f countErrors "error" ++
-                    (if countErrors > 0 && countWarnings > 0 then ", " else "") ++ f countWarnings "warning") ++
-                   " - " ++ takeFileName curdir
+            let updateTitle extra = setTitle $
+                    let f n msg = if n == 0 then "" else show n ++ " " ++ msg ++ ['s' | n > 1]
+                    in (if countErrors == 0 && countWarnings == 0 then allGoodMessage else f countErrors "error" ++
+                        (if countErrors > 0 && countWarnings > 0 then ", " else "") ++ f countWarnings "warning") ++
+                       " " ++ extra ++ "- " ++ takeFileName curdir
+
+            updateTitle $ if isJust test then "(running test) " else ""
+            outputFill (Just messages) ["Running test..." | isJust test]
+            whenJust test $ \test -> do
+                res <- exec ghci test
+                outputFill (Just messages) $ fromMaybe res $ stripSuffix ["*** Exception: ExitSuccess"] res
+                updateTitle ""
+
             let wait = nubOrd $ loaded ++ reloaded
             when (null wait) $ do
                 putStrLn $ "No files loaded, probably did not start GHCi.\nCommand: " ++ command
@@ -136,7 +146,8 @@ runGhcid waiter restart command size output = do
                 fire nextWait messages warnings
             else do
                 stopGhci ghci
-                runGhcid waiter restart command size output
+                runGhcid waiter restart command test size output
+
     fire nextWait messages []
 
 
